<resources>
    <string name="app_name">Rick&amp;Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rick_amp_morty"><![CDATA[Rick & Morty]]></string>
    <string name="search_characters">Search Characters</string>
    <string name="episodes">Episodes</string>
    <string name="all_episodes">All Episodes</string>
    <string name="all_characters">All Characters</string>
    <string name="characters">Characters</string>
</resources>